controllers/user/deploy/drop/deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: user-controller-manager-metrics-service
  namespace: user-system
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  name: user-webhook-service
  namespace: user-system
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: controller-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: user-controller-manager
  namespace: user-system
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --health-probe-bind-address=:8081
        - --metrics-bind-address=127.0.0.1:8080
        - --leader-elect
        - --kube-api-qps=5
        - --kube-api-burst=10
        command:
        - /manager
        image: ghcr.io/labring/sealos-user-controller:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=0
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.13.0
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1024Mi
          requests:
            cpu: 5m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
      securityContext:
        runAsNonRoot: true
      serviceAccountName: user-controller-manager
      terminationGracePeriodSeconds: 10
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: "control-plane"
                  operator: In
                  values:
                  - controller-manager
              topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: user-system/user-serving-cert
  name: user-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: user-webhook-service
      namespace: user-system
      path: /mutate-user-sealos-io-v1-operationrequest
  failurePolicy: Fail
  name: moperationrequest.kb.io
  rules:
  - apiGroups:
    - user.sealos.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - operationrequests
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: user-webhook-service
      namespace: user-system
      path: /mutate-user-sealos-io-v1-user
  failurePolicy: Fail
  name: muser.kb.io
  rules:
  - apiGroups:
    - user.sealos.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
  sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: user-system/user-serving-cert
  name: user-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: user-webhook-service
      namespace: user-system
      path: /validate-user-sealos-io-v1-operationrequest
  failurePolicy: Fail
  name: voperationrequest.kb.io
  rules:
  - apiGroups:
    - user.sealos.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - operationrequests
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: user-webhook-service
      namespace: user-system
      path: /validate-user-sealos-io-v1-user
  failurePolicy: Fail
  name: vuser.kb.io
  rules:
  - apiGroups:
    - user.sealos.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - users
  sideEffects: None
